all files chnages, added nginx proxy, everything working fine

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,24 +1,13 @@
-# Use Node.js for building the frontend
-FROM node:18-alpine AS build
+# Use Node.js 18 for compatibility with Next.js
+FROM node:18
 
 WORKDIR /app
 
-# Copy package.json and install dependencies
 COPY package.json package-lock.json ./
 RUN npm install
 
-# Copy the rest of the files and build the project
 COPY . .
-RUN npm run build  
 
-# Start a new container for running the server
-FROM node:18-alpine
-
-WORKDIR /app
-COPY --from=build /app /app
-
-# Expose Next.js server port
 EXPOSE 3000
 
-# Start Next.js in production mode
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
