--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,34 @@
-version: '3.8'
+version: '3'
 
 services:
-  backend:
-    build: ./backend
-    ports:
-      - "5001:5000"
-    volumes:
-      - ./backend:/app
-      - ./backend/instance:/app/instance  # Ensures SQLite database is persistent
-    environment:
-      - FLASK_ENV=development
-      - DATABASE_URL=sqlite:///instance/site.db  # Ensures Flask uses the correct SQLite path
-    depends_on: []
-
   frontend:
     build: ./frontend
+    container_name: frontend
+    expose:
+      - "3000"
+    networks:
+      - app-network
+
+  backend:
+    build: ./backend
+    container_name: backend
+    expose:
+      - "5500"
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
     ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=production
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - app-network
     depends_on:
+      - frontend
       - backend
+
+networks:
+  app-network:
